add reset button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     input[type="text"] { padding: 10px; width: 200px; }
     button { padding: 10px 20px; background-color: #2c5f2d; color: white; border: none; cursor: pointer; margin-left: 10px; }
     #summary { display: none; }
+    #resetButton { display: none; margin-top: 1em; background-color: #aa0000; }
   </style>
 </head>
 <body>
@@ -24,6 +25,7 @@
   <div class="submit-area">
     <input type="text" id="username" placeholder="Your Name" required>
     <button id="submitButton">Submit</button>
+    <button id="resetButton">Reset All Responses</button>
   </div>
   <div id="grid"></div>
   <h2>Summary</h2>
@@ -47,6 +49,10 @@
       const startDate = new Date();
       startDate.setMonth(startDate.getMonth() + 3);
       startDate.setDate(1);
+      const cutoffDate = new Date(startDate);
+      cutoffDate.setDate(cutoffDate.getDate() + 7);
+      cutoffDate.setHours(23, 59, 59, 999);
+
       const endDate = new Date(startDate.getFullYear(), startDate.getMonth() + 1, 0);
       const hours = [17, 18, 19, 20, 21, 22];
 
@@ -107,6 +113,12 @@
       }
 
       function submitAvailability() {
+        const now = new Date();
+        if (now > cutoffDate) {
+          alert('Sorry, submissions are now closed.');
+          return;
+        }
+
         const name = document.getElementById('username').value.trim();
         if (!name) return alert('Please enter your name');
 
@@ -197,6 +209,21 @@
       }
 
       document.getElementById('submitButton').addEventListener('click', submitAvailability);
+      document.getElementById('resetButton').addEventListener('click', () => {
+        if (confirm('Are you sure you want to clear all responses?')) {
+          db.ref('responses').remove().then(() => {
+            alert('All responses cleared.');
+            location.reload();
+          });
+        }
+      });
+
+      if (new Date() > cutoffDate) {
+        document.getElementById('submitButton').disabled = true;
+        document.getElementById('submitButton').textContent = 'Submissions Closed';
+        document.getElementById('resetButton').style.display = 'inline-block';
+      }
+
       generateGrid();
     });
   </script>
