--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     button { padding: 10px 20px; background-color: #2c5f2d; color: white; border: none; cursor: pointer; margin-left: 10px; }
     #summary { display: none; }
     #resetButton { display: none; margin-top: 1em; background-color: #aa0000; }
+    #changeButton { display: none; margin-top: 1em; background-color: #444; }
   </style>
 </head>
 <body>
@@ -26,6 +27,7 @@
     <input type="text" id="username" placeholder="Your Name" required>
     <button id="submitButton">Submit</button>
     <button id="resetButton">Reset All Responses</button>
+    <button id="changeButton" onclick="showGrid()">Change Availability</button>
   </div>
   <div id="grid"></div>
   <h2>Summary</h2>
@@ -38,7 +40,7 @@
         authDomain: "bookies-availability.firebaseapp.com",
         databaseURL: "https://bookies-availability-default-rtdb.firebaseio.com",
         projectId: "bookies-availability",
-        storageBucket: "bookies-availability.firebasestorage.app",
+        storageBucket: "bookies-availability.appspot.com",
         messagingSenderId: "429713911832",
         appId: "1:429713911832:web:0da21ca51099bfd8e7536d"
       };
@@ -66,6 +68,7 @@
 
       function generateGrid() {
         const gridDiv = document.getElementById('grid');
+        gridDiv.innerHTML = '';
         const table = document.createElement('table');
         const header = document.createElement('tr');
         header.innerHTML = '<th>Date</th>' + hours.map(h => `<th>${h}:00</th>`).join('');
@@ -131,9 +134,18 @@
 
           db.ref('responses/' + name).set(availability).then(() => {
             alert('Availability submitted!');
+            document.getElementById('grid').style.display = 'none';
+            document.getElementById('summary').style.display = 'block';
+            document.getElementById('changeButton').style.display = 'inline-block';
             loadSummary();
           });
         });
+      }
+
+      function showGrid() {
+        document.getElementById('grid').style.display = 'block';
+        document.getElementById('summary').style.display = 'none';
+        document.getElementById('changeButton').style.display = 'none';
       }
 
       function loadSummary() {
@@ -152,7 +164,6 @@
           }
 
           const summaryDiv = document.getElementById('summary');
-          summaryDiv.style.display = 'block';
           summaryDiv.innerHTML = '';
           const table = document.createElement('table');
           const header = document.createElement('tr');
